# backgen

./: .gitignore  Cargo.toml  README.md
assets/: index.html
cmd/cli/: main.rs
cmd/web/: main.rs
src/: cfg.rs  chooser.rs  color.rs  deserializer.rs  gen_image.rs  lib.rs  paint.rs  pos.rs  salt.rs  scene.rs  svg.rs  tesselate.rs
